fix: scrollbar of #content did not shown

--- a/app/assets/stylesheets/layout.css.sass
+++ b/app/assets/stylesheets/layout.css.sass
@@ -1,3 +1,5 @@
+$header_height: 30px
+
 html, body
   height: 100%
   padding: 0
@@ -7,52 +9,51 @@ html, body
   width: 100%
   top: 0
   position: fixed
-  height: 25px
-  float: left
+  height: $header_height
+  background: #eee
+  border-bottom: 1px solid black
+
+  #search
+    position: fixed
+    top: 0
+    padding: 4px
+    width: 292px
+
+    #search-box
+      width: 255px
+      border: 1px solid #ccc
+      height: 18px
+      padding: 0 5px
+      margin: 0
+      margin-bottom: 4px
+      border-radius: 10px
+      outline: none
+      -webkit-border-radius: 10px
+      -moz-border-radius: 10px
 
   #menu
     #language
       float: right
+      margin-right: 20px
 
 #content
   position: fixed
-  top: 0
+  top: $header_height
+  width: 100%
+  height: 100%
+  overflow: auto
 
   #left
     width: 300px
     height: 100%
     border-right: 1px solid #aaa
-    background: #fff
     position: fixed
     overflow: auto
-    padding-top: 20px
-
-    #search
-      position: fixed
-      top: 0
-      padding: 4px
-      background: #eee
-      width: 292px
-      border-bottom: 1px solid #ccc
-
-      #search-box
-        width: 255px
-        border: 1px solid #ccc
-        height: 18px
-        padding: 0 5px
-        margin: 0
-        margin-bottom: 4px
-        border-radius: 10px
-        outline: none
-        -webkit-border-radius: 10px
-        -moz-border-radius: 10px
 
   #right
     margin-left: 310px
-    height: 100%
 
     #body
       margin: 1em
-      overflow: auto
 
 #footer
